Added a genre table to the database and remade the unit tests, entitys and DTOs