@@ -2,14 +2,17 @@ package com.example.individualproject.business.impl;
 
 import com.example.individualproject.business.ProductService;
 import com.example.individualproject.dto.products.*;
+import com.example.individualproject.dto.users.GetUserDTO;
+import com.example.individualproject.repository.GenreRepository;
 import com.example.individualproject.repository.ImageRepository;
+import com.example.individualproject.repository.NormalUserRepository;
 import com.example.individualproject.repository.ProductRepository;
+import com.example.individualproject.repository.entity.Genre;
 import com.example.individualproject.repository.entity.Image;
+import com.example.individualproject.repository.entity.NormalUser;
 import com.example.individualproject.repository.entity.Product;
-import org.flywaydb.core.api.callback.BaseCallback;
 import org.junit.jupiter.api.Test;
 
-import java.security.cert.PolicyNode;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -22,27 +25,33 @@ class ProductServiceImplTest {
     @Test
     void getAllProducts() {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
-        Product PokemonDiamond = Product.builder().id(1l).title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(Collections.emptyList()).build();
+        NormalUser user = new NormalUser(1l,"Lars","Lars","Lars","Lars","Lars","Lars");
+        GetUserDTO userDTO = new GetUserDTO(user);
 
-        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(Collections.emptyList()).build();
+        Product PokemonDiamond = Product.builder().id(1l).title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(user).build();
+        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(user).build();
 
+        when(genreRepositoryMock.getById(1l))
+                .thenReturn(new Genre(1l,null, null));
         when(productRepositoryMock.findAll())
                 .thenReturn(List.of(PokemonDiamond, PokemonPearl));
 
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
         List<GetProductDTO> actualResult = productServiceMock.getAllProducts();
 
 
 
-        BasicProductInfo product1 = BasicProductInfo.builder().title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").productType("GAME").images(Collections.emptyList()).build();
-        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").productType("GAME").images(Collections.emptyList()).build();
+        BasicProductInfo product1 = BasicProductInfo.builder().title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genreId(1l).productType("GAME").images(Collections.emptyList()).build();
+        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genreId(1l).productType("GAME").images(Collections.emptyList()).build();
 
-        GetProductDTO PokemonDiamondDTO = new GetProductDTO(1l, product1);
-        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2);
+        GetProductDTO PokemonDiamondDTO = new GetProductDTO(1l, product1, userDTO);
+        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2, userDTO);
 
         List<GetProductDTO> expectedResult = List.of(PokemonDiamondDTO, PokemonPearlDTO);
 
@@ -55,31 +64,37 @@ class ProductServiceImplTest {
     @Test
     void getProducts() {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
-        Product PokemonDiamond = Product.builder().id(1l).title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(Collections.emptyList()).build();
+        NormalUser user = new NormalUser(1l,"Lars","Lars","Lars","Lars","Lars","Lars");
+        GetUserDTO userDTO = new GetUserDTO(user);
 
-        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(Collections.emptyList()).build();
+        Product PokemonDiamond = Product.builder().id(1l).title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(user).build();
+        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(user).build();
 
-        when(productRepositoryMock.findProductsByTitleLikeOrSubTitleIsLikeOrSeriesIsLikeOrConditionIsLikeOrGenreIsLike("%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%"))
+        when(genreRepositoryMock.getById(1l))
+                .thenReturn(new Genre(1l,null, null));
+        when(productRepositoryMock.findProductsByTitleLikeOrSubTitleIsLikeOrSeriesIsLikeOrConditionIsLikeOrGenre_GenreIsLike("%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%"))
                 .thenReturn(List.of(PokemonDiamond, PokemonPearl));
 
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
         List<GetProductDTO> actualResult = productServiceMock.getProducts("Pokemon");
 
-        BasicProductInfo product1 = BasicProductInfo.builder().title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").productType("GAME").images(Collections.emptyList()).build();
-        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").productType("GAME").images(Collections.emptyList()).build();
+        BasicProductInfo product1 = BasicProductInfo.builder().title("Pokemon").subTitle("diamond").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genreId(1l).productType("GAME").images(Collections.emptyList()).build();
+        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genreId(1l).productType("GAME").images(Collections.emptyList()).build();
 
-        GetProductDTO PokemonDiamondDTO = new GetProductDTO(1l, product1);
-        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2);
+        GetProductDTO PokemonDiamondDTO = new GetProductDTO(1l, product1, userDTO);
+        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2, userDTO);
 
         List<GetProductDTO> expectedResult = List.of(PokemonDiamondDTO, PokemonPearlDTO);
 
         assertEquals(expectedResult, actualResult);
 
-        verify(productRepositoryMock).findProductsByTitleLikeOrSubTitleIsLikeOrSeriesIsLikeOrConditionIsLikeOrGenreIsLike("%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%");
+        verify(productRepositoryMock).findProductsByTitleLikeOrSubTitleIsLikeOrSeriesIsLikeOrConditionIsLikeOrGenre_GenreIsLike("%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%","%Pokemon%");
 
 
 
@@ -92,29 +107,33 @@ class ProductServiceImplTest {
     @Test
     void getProduct() {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
-        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(Collections.emptyList()).build();
+        NormalUser user = new NormalUser(1l,"Lars","Lars","Lars","Lars","Lars","Lars");
+        GetUserDTO userDTO = new GetUserDTO(user);
 
+        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(user).build();
+
+        when(genreRepositoryMock.getById(1l))
+                .thenReturn(new Genre(1l,null, null));
         when(productRepositoryMock.findProductsByIdIs(2l))
                 .thenReturn(PokemonPearl);
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
         GetProductDTO actualResult = productServiceMock.getProduct(2l);
 
+        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genreId(1l).productType("GAME").images(Collections.emptyList()).build();
 
-
-        BasicProductInfo product2 = BasicProductInfo.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").productType("GAME").images(Collections.emptyList()).build();
-
-        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2);
+        GetProductDTO PokemonPearlDTO = new GetProductDTO(2l, product2, userDTO);
 
         GetProductDTO expectedResult = PokemonPearlDTO;
 
         assertEquals(expectedResult, actualResult);
 
         verify(productRepositoryMock).findProductsByIdIs(2l);
-
 
         GetProductDTO actualResultWithNullID = productServiceMock.getProduct( null);
 
@@ -124,23 +143,33 @@ class ProductServiceImplTest {
     @Test
     void getAllOfAUsersProducts()  {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
+        Product PokemonPearl= Product.builder().id(1l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(Collections.emptyList()).seller(new NormalUser()).build();
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        when(productRepositoryMock.findAllBySeller_Id(1l))
+                .thenReturn(List.of(PokemonPearl));
+
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
         List<GetProductDTO> actualResult = productServiceMock.getAllOfAUsersProducts(1l);
-        List<GetProductDTO> expectedResult = Collections.emptyList();
+        List<GetProductDTO> expectedResult = List.of(new GetProductDTO(PokemonPearl));
 
         assertEquals(expectedResult, actualResult);
+
+        verify(productRepositoryMock).findAllBySeller_Id(1l);
     }
 
     @Test
     void deleteProduct() {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
         productServiceMock.deleteProduct(1l);
 
@@ -151,8 +180,9 @@ class ProductServiceImplTest {
     @Test
     void addProduct() {
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
-
 
         List<Image> images = new ArrayList<>();
 
@@ -164,17 +194,19 @@ class ProductServiceImplTest {
         imageUrls.add("aaa");
 
 
-        Product PokemonPearl= Product.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(images).build();
+        Product PokemonPearl= Product.builder().title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(images).build();
 
-        Product PokemonPearl2= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(images).build();
+        Product PokemonPearl2= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(images).build();
 
+        when(genreRepositoryMock.getById(1l))
+                .thenReturn(new Genre(1l,null, null));
         when(productRepositoryMock.save(PokemonPearl))
                 .thenReturn(PokemonPearl2);
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
 
-        CreateProductRequestDTO createProductRequestDTO = new CreateProductRequestDTO( new BasicProductInfo("Pokemon","Pearl","Pokemon",2022,10.01,"TRASH","Pokemon game","JRPG","GAME", imageUrls));
+        CreateProductRequestDTO createProductRequestDTO = new CreateProductRequestDTO( new BasicProductInfo("Pokemon","Pearl","Pokemon",2022,10.01,"TRASH","Pokemon game",1l,"GAME", imageUrls), 1l);
         CreateProductResponseDTO actualResult = productServiceMock.addProduct(createProductRequestDTO);
 
         CreateProductResponseDTO expectedResult = CreateProductResponseDTO.builder()
@@ -190,6 +222,8 @@ class ProductServiceImplTest {
     void updateProduct() {
 
         ProductRepository productRepositoryMock = mock(ProductRepository.class);
+        GenreRepository genreRepositoryMock = mock(GenreRepository.class);
+        NormalUserRepository normalUserRepositoryMock = mock(NormalUserRepository.class);
         ImageRepository imageRepositoryMock = mock(ImageRepository.class);
 
 
@@ -203,17 +237,20 @@ class ProductServiceImplTest {
         imageUrls.add("aaa");
 
 
-        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(images).build();
+        Product PokemonPearl= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(images).build();
 
-        Product PokemonPearl2= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre("JRPG").sold(false).productType("GAME").images(images).build();
+        Product PokemonPearl2= Product.builder().id(2l).title("Pokemon").subTitle("Pearl").series("Pokemon").year(2022).price(10.01).condition("TRASH").description("Pokemon game").genre(new Genre(1l,null, null)).sold(false).productType("GAME").images(images).build();
 
+        when(genreRepositoryMock.getById(1l))
+                .thenReturn(new Genre(1l,null, null));
         when(productRepositoryMock.save(PokemonPearl))
                 .thenReturn(PokemonPearl2);
 
-        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock,imageRepositoryMock);
+        ProductService productServiceMock = new ProductServiceImpl(productRepositoryMock, genreRepositoryMock, normalUserRepositoryMock, imageRepositoryMock);
 
 
-        UpdateProductRequestDTO updateProductRequestDTO = new UpdateProductRequestDTO ( 2l,new BasicProductInfo("Pokemon","Pearl","Pokemon",2022,10.01,"TRASH","Pokemon game","JRPG","GAME", imageUrls));
+        UpdateProductRequestDTO updateProductRequestDTO = new UpdateProductRequestDTO ( 2l,new BasicProductInfo("Pokemon","Pearl","Pokemon",2022,10.01,"TRASH","Pokemon game",1l,"GAME", imageUrls));
+
         UpdateProductResponseDTO actualResult = productServiceMock.updateProduct(updateProductRequestDTO);
 
         UpdateProductResponseDTO expectedResult = UpdateProductResponseDTO.builder()
